argo-rollouts-canary/base/canary/canary-preview-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-demo-preview
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: canary-preview-demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: canary-demo-preview
            port:
              name: http
